@@ -49,13 +49,13 @@ int flagnotify = 1;	/* notify subscriber of completed events. 0 also */
 			/* suppresses all subscriber communication for */
 			/* [un]sub if -U/-S is used */
 int flagbottom = 1;	/* default: copy request & admin info to message */
-int flaglist = 0;	/* default: do not reply to -list */
+int flaglist = -1;	/* default: do not reply to -list */
 int flagget = 1;	/* default: service -get requests */
-int flagsubconf = 1;	/* default: require user-confirm for subscribe */
-int flagunsubconf = 1;	/* default: require user-confirm for unsubscribe */
+int flagsubconf = -1;	/* default: require user-confirm for subscribe */
+int flagunsubconf = -1;	/* default: require user-confirm for unsubscribe */
 int flagunsubismod = 0;	/* default: do not require moderator approval to */
 			/* unsubscribe from moderated list */
-int flagedit = 0;	/* default: text file edit not allowed */
+int flagedit = -1;	/* default: text file edit not allowed */
 int flagstorefrom = 1;	/* default: store from: line for subscribes */
 char encin = '\0';	/* encoding of incoming message */
 int flagdig = 0;	/* request is not for digest list */
@@ -616,7 +616,6 @@ int main(int argc,char **argv)
 
   startup(dir = argv[optind]);
   load_config(dir);
-  getconf_ulong(&copylines,"copylines",0,dir);
 
   sender = env_get("SENDER");
   if (!sender) strerr_die2x(100,FATAL,ERR_NOSENDER);
@@ -631,6 +630,16 @@ int main(int argc,char **argv)
     strerr_die2x(100,FATAL,ERR_BOUNCE);
 
   if (!stralloc_copys(&ddir,dir)) die_nomem();
+
+  getconf_ulong(&copylines,"copylines",0,dir);
+  if (flagsubconf == -1)
+    flagsubconf = !getconf_line(&line,"noconfirmsub",0,dir);
+  if (flagunsubconf == -1)
+    flagunsubconf = !getconf_line(&line,"noconfirmunsub",0,dir);
+  if (flaglist == -1)
+    flaglist = getconf_line(&line,"remotelist",0,dir);
+  if (flagedit == -1)
+    flagedit = getconf_line(&line,"remoteedit",0,dir);
 
   if (case_starts(action,"digest")) {			/* digest */
     action += 6;
