@@ -172,6 +172,18 @@
 # Message confirmation
 </-confirmpost#eY/>
 </confirmpost#y/>
+# Subscription confirmation
+</-noconfirmsub#eH/>
+</noconfirmsub#h/>
+# Unsubscription confirmation
+</-noconfirmunsub#eJ/>
+</noconfirmunsub#j/>
+# Remote text editing
+</-remoteedit#eN/>
+</remoteedit#n/>
+# Remote subscriber listing
+</-remotelist#eL/>
+</remotelist#l/>
 # List owner mail
 </owner#5/>
 <#5#>
@@ -192,47 +204,9 @@
 # Service subject commands to the # request address if the -q switch is given.
 </manager#q/>
 |<#B#>/ezmlm-request '<#D#>'
-# -l and -d enable subscriber listing/text file editing, for remote adms.
-# Ok to add -l/-d even for non-mod lists, since ezmlm-manage
-# won't allow it unless there are remote admins. The lack of logic other than
-# AND makes this very tedious ...
-# first lists with normal confirmation:
-</manager#LNHJ/>
+</manager/>
 |<#B#>/ezmlm-manage '<#D#>'
-</manager#lNHJ/>
-|<#B#>/ezmlm-manage -l '<#D#>'
-</manager#LnHJ/>
-|<#B#>/ezmlm-manage -e '<#D#>'
-</manager#lnHJ/>
-|<#B#>/ezmlm-manage -le '<#D#>'
-# ... now no confirmation for subscribe ...
-</manager#LNhJ/>
-|<#B#>/ezmlm-manage -S '<#D#>'
-</manager#lNhJ/>
-|<#B#>/ezmlm-manage -lS '<#D#>'
-</manager#LnhJ/>
-|<#B#>/ezmlm-manage -eS '<#D#>'
-</manager#lnhJ/>
-|<#B#>/ezmlm-manage -leS '<#D#>'
-# ... now no confirmation for unsubscribe ...
-</manager#LNHj/>
-|<#B#>/ezmlm-manage -U '<#D#>'
-</manager#lNHj/>
-|<#B#>/ezmlm-manage -lU '<#D#>'
-</manager#LnHj/>
-|<#B#>/ezmlm-manage -eU '<#D#>'
-</manager#lnHj/>
-|<#B#>/ezmlm-manage -leU '<#D#>'
-# ... and finally no confirmation at all ...
-</manager#LNhj/>
-|<#B#>/ezmlm-manage -US '<#D#>'
-</manager#lNhj/>
-|<#B#>/ezmlm-manage -lUS '<#D#>'
-</manager#Lnhj/>
-|<#B#>/ezmlm-manage -eUS '<#D#>'
-</manager#lnhj/>
-|<#B#>/ezmlm-manage -leUS '<#D#>'
-</manager#W/>
+</#W/>
 |<#B#>/ezmlm-warn '<#D#>' || exit 0
 </#dW/>
 |<#B#>/ezmlm-warn -d '<#D#>' || exit 0
