@@ -52,7 +52,7 @@
   ${EZBIN}/ezmlm-unsub "${DIR}/mod" "$SENDER" || exit 100
   SENDER="${SND}@$HOST"		# restore order
   touch "${DIR}/remote" || \
-	{ ${ECHO} "Failed to remove DIR/remote"; exit 99; }
+	{ ${ECHO} "Failed to recreate DIR/remote"; exit 99; }
   LOCAL="$LOC-digest-subscribe"
 	DEFAULT='digest-subscribe'
 
