@@ -1,3 +1,4 @@
+????-??-?? ezmlm-idx-5.2.0, move to flag files instead of command options
 2006-08-08 ezmlm-idx-5.1.0, added ezmlm-import, headerkeep, mimekeep, others
 2006-01-16 ezmlm-idx-5.0.2, bug fixes, small feature addition
 2005-12-16 ezmlm-idx-5.0.1, bug fixes
